fix spacing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-body {
+/* body {
   min-width: fit-content;
-}
+} */
